agregar animacion de fade-in a alerta de cero resultados

--- a/src/app/components/heroes-busqueda/heroes-busqueda.component.html
+++ b/src/app/components/heroes-busqueda/heroes-busqueda.component.html
@@ -1,7 +1,7 @@
 <h1>Buscando: <small>{{ termino }}</small></h1>
 <hr />
 
-<div *ngIf="heroes.length === 0" class="row">
+<div *ngIf="heroes.length === 0" class="row animated fadeIn fast">
   <div class="col-md-12">
     <div class="alert alert-info" role="alert">
       No existen resultados con el término: {{ termino }}
