--- a/src/app/components/heroes-busqueda/heroes-busqueda.component.html
+++ b/src/app/components/heroes-busqueda/heroes-busqueda.component.html
@@ -10,19 +10,5 @@
 </div>
 
 <div class="card-columns">
-  <div class="card animated fadeIn fast" *ngFor="let heroe of heroes">
-    <img [src]="heroe.img" class="card-img-top img-fluid" [alt]="heroe.nombre" />
-    <div class="card-body">
-      <h5 class="card-title">{{ heroe.nombre }}</h5>
-      <p class="card-text">
-        {{ heroe.bio }}
-      </p>
-      <p class="card-text">
-        <small class="text-muted">{{ heroe.aparicion }}</small>
-      </p>
-    </div>
-    <button (click)="verHeroe(heroe.id)" type="button" class="btn btn-outline-primary btn-block">
-      Ver más...
-    </button>
-  </div>
+<app-heroe-tarjeta [heroe]="heroe" *ngFor="let heroe of heroes"></app-heroe-tarjeta>
 </div>
